# MIMO_detect

./: .gitignore  C_time_seperate.csv  MHGD_accel.c  MHGD_accel.h  MHGD_accel_1.cpp  MHGD_accel_1.h  MHGD_accel_hw.cpp  MHGD_accel_hw.h  MIMO_simulation.c  MIMO_simulation.h  MIMO_simulation_1.cpp  MIMO_simulation_1.h  MMSE.C  MMSE.h  MMSE_1.cpp  MMSE_1.h  MyComplex.h  MyComplex_1.h  README.md  compile_commands.json  gaussian_random_values.txt  hls_config.cfg  hls_function.c  hls_function.h  main.c  main_hw.cpp  readme.md  run_cpp.tcl  run_hw.tcl  run_tcl.tcl  sys_config_1.h  tb.c  tb_1.cpp  util.c  util.h  util_1.cpp  util_1.h  vitis-comp.json  xelab.pb
sw/MCMC_MIMO_Detector-master/: CMakeLists.txt  H.txt  MHGD_accel.c  MHGD_accel.h  MHGD_accel_sw.cpp  MHGD_accel_sw.h  MIMO_simulation.c  MIMO_simulation.h  MMSE.c  MyComplex.h  README.md  _64QAM_Constellation.txt  main.c  main_sw.cpp  run_csim.tcl  sys_config.h  time_record_hls_run.txt  util.c  util.h
sw/MCMC_MIMO_Detector-master/MHGD_sw/: MHGD_sw.hlsrun_csim_summary  compile_commands.json  hls_config.cfg  vitis-comp.json
sw/MCMC_MIMO_Detector-master/MHGD_sw/.cache/clangd/index/: MHGD_accel.c.F786428114B4B2AA.idx  (+13 more)
sw/MCMC_MIMO_Detector-master/MHGD_sw/hls/: config.cmdline
sw/MCMC_MIMO_Detector-master/data/: C_time_seperate.csv
sw/MCMC_MIMO_Detector-master/input_file/: y_SNR=5.txt
sw/MCMC_MIMO_Detector-master/output_file/: bits_output_SNR=10.txt  bits_output_SNR=15.txt  bits_output_SNR=20.txt  bits_output_SNR=25.txt
sw/MCMC_MIMO_Detector-master/reference_file/: bits_SNR=20.txt  bits_SNR=25.txt
(+570 files in other folders)
